# minutes_pipeline

./: .gitignore  CHANGELOG.md  README.md  mpipe_2h_japanese_meeting_plan.md  mpipe_llm_prompts_chunk_and_merge.md  pyproject.toml  wav_to_mp4.py  wav_to_mp4.sh
docs/: GitHubへのプッシュ手順.md  GitHubプッシュ_最も確実な方法_GitHub_CLI.md  GitHub認証の詳細_HTTPSとSSH.md  cursor.md  test_B-0001_wav.md  wav_to_mp4.md  プッシュ失敗_HTTP500_対処.md  大きなオブジェクトを確認するコマンド.md  社用PCでの利用手順.md
examples/project-template/: .gitignore  minutes.yml
examples/project-template/dictionaries/: stop_phrases.txt  terms.csv
examples/project-template/prompts/: minutes_prompt.md  minutes_schema.json
scripts/: push_to_github.sh  remove_large_tests_from_history.sh
src/minutes_pipeline/: cli.py  config.py  io.py  pipeline.py
src/minutes_pipeline/summarize/: __init__.py  llm_adapter.py  models.py  prompt.py  render.py  schema.py
tests/: ASR_SLOW_TROUBLESHOOTING.md  README_minutes_config_comparison.md  README_テスト手順.md  check_asr_backend.py  check_specs.sh  collect_specs.py  minutes_base.yml  minutes_dev.yml  minutes_dev_lowvram.yml  minutes_dev_見積もりとスペック確認.md  minutes_large.yml  minutes_medium.yml  minutes_small.yml  minutes_tiny.yml  test_manual_pack.py  test_render_robustness.py  test_schema_validation.py
tests/data/: README.md
